--- a/modules/modified/feature_set/feature-set.css
+++ b/modules/modified/feature_set/feature-set.css
@@ -1,3 +1,8 @@
+#feature-set-admin-form .switch {
+  display: block;
+  display: inline-block;
+}
+
 #feature-set-admin-form .feature-set-image {
   float: left;
   width: 0;
@@ -68,10 +73,22 @@
 
 #feature-set-admin-form td.switcher {
   width: 100px;
+  text-align: center;
 }
 
 #feature-set-admin-form ul.links li {
   display: inline;
+}
+
+#feature-set-admin-form tr.gradient > td.feature {
+  background: #e9f4d3; /* Old browsers */
+  background: -moz-linear-gradient(45deg,  #e9f4d3 0%, #ffffff 40%, #ffffff 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#e9f4d3), color-stop(40%,#ffffff), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(45deg,  #e9f4d3 0%,#ffffff 40%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(45deg,  #e9f4d3 0%,#ffffff 40%,#ffffff 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(45deg,  #e9f4d3 0%,#ffffff 40%,#ffffff 100%); /* IE10+ */
+  background: linear-gradient(45deg,  #e9f4d3 0%,#ffffff 40%,#ffffff 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9f4d3', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
 /* -----
