--- a/themes/ec_default/css/hack.css
+++ b/themes/ec_default/css/hack.css
@@ -28,3 +28,8 @@ label {
   text-align: left;
   font-size: 1em;
 }
+fieldset legend {
+  font-size: 1.2em;
+  font-weight: bold;
+  padding-left: 0;
+}
