--- a/modules/modified/feature_set/feature-set.css
+++ b/modules/modified/feature_set/feature-set.css
@@ -102,12 +102,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 /* -----
   On/Off switchers 
 ----- */
-.cb-enable, .cb-disable, .cb-enable span, .cb-disable span { background: url(switch.gif) repeat-x; display: block; float: left; }
-.cb-enable span, .cb-disable span { line-height: 30px; display: block; background-repeat: no-repeat; font-weight: bold; }
-.cb-enable span { background-position: left -90px; padding: 0 10px; }
-.cb-disable span { background-position: right -180px;padding: 0 10px; }
-.cb-disable.selected { background-position: 0 -30px; }
-.cb-disable.selected span { background-position: right -210px; color: #fff; }
+.cb-enable, .cb-disable, .cb-enable span, .cb-disable span { background: url(switch.png) repeat-x; display: block; float: left; }
+.cb-enable span, .cb-disable span { line-height: 30px; display: block; background-repeat: no-repeat; font-weight: bold; color: #999; }
+.cb-enable span { background-position: left -120px; padding: 0 10px; }
+.cb-disable span { background-position: right -240px;padding: 0 10px; }
+.cb-disable.selected { background-position: 0 -90px; }
+.cb-disable.selected span { background-position: right -330px; color: #fff; }
 .cb-enable.selected { background-position: 0 -60px; }
-.cb-enable.selected span { background-position: left -150px; color: #fff; }
+.cb-enable.selected span { background-position: left -180px; color: #fff; }
+.form-disabled .cb-disable.selected { background-position: 0 -30px; }
+.form-disabled .cb-disable.selected span { background-position: right -270px; color: #fff; }
+.form-disabled .cb-enable.selected { background-position: 0 -30px; }
+.form-disabled .cb-enable.selected span { background-position: left -150px; color: #fff; }
 .switch label { cursor: pointer; width: auto; margin: 0 !important}
